force-app/main/default/objects/Billing_Contract__c/Billing_Contract__c.object-meta.xml
<CustomObject>
    <label>Billing Contract</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Contract</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>