force-app/main/default/objects/Billing_Contract__c/fields/Account_Finance_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Finance_Contact_Email__c</fullName>
    <description>NICC-050411</description>
    <formula>Account__r.c2g__CODAFinanceContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Finance Contact Email</label>
    <type>Text</type>
</CustomField>