force-app/main/default/objects/Billing_Contract__c/fields/Accounting_Currency__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Currency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Company__c</field>
            <operation>equals</operation>
            <valueField>c2g__codaAccountingCurrency__c.c2g__OwnerCompany__c</valueField>
        </filterItems>
        <infoMessage>Filtering currencies related to the BC company</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
    <relationshipLabel>Billing Contract</relationshipLabel>
    <relationshipName>Billing_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>