force-app/main/default/objects/Billing_Contract__c/fields/Bill_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary Contact where invoices will be emailed</inlineHelpText>
    <label>Bill to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Contract</relationshipLabel>
    <relationshipName>Billing_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>