force-app/main/default/objects/Billing_Contract__c/fields/Billing_Hold__c.field-meta.xml
<CustomField>
    <fullName>Billing_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hold on Billing</description>
    <inlineHelpText>Temporarily prevents this billing contract from creating Sales Invoices</inlineHelpText>
    <label>Billing Hold</label>
    <type>Checkbox</type>
</CustomField>