force-app/main/default/objects/Billing_Contract__c/fields/Billing_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Hold_Reason__c</fullName>
    <businessOwnerUser>robert.quigley@amadeus.com</businessOwnerUser>
    <description>Reason why Billing Contract is placed on Billing Hold. NICC-042151</description>
    <inlineHelpText>The reason why this Billing Contract is being placed on Billing Hold.</inlineHelpText>
    <label>Billing Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HSC- Pending Sub Activation</fullName>
            </value>
            <value>
                <fullName>Manual Billing Agreement</fullName>
            </value>
            <value>
                <fullName>Pending a Change Order</fullName>
            </value>
            <value>
                <fullName>Pending Research/Correction</fullName>
            </value>
            <value>
                <fullName>Request from Sales</fullName>
            </value>
            <value>
                <fullName>Services Billed upon Activation</fullName>
            </value>
            <value>
                <fullName>Previously On Hold</fullName>
                <isActive>false</isActive>
                <label>Previously On Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>