force-app/main/default/objects/Billing_Contract__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual or Group responsible for collecting payment on this account</inlineHelpText>
    <label>Collector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Billing_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>