force-app/main/default/objects/Billing_Contract__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The FFA Company that will house this invoice</inlineHelpText>
    <label>Company</label>
    <referenceTo>c2g__codaCompany__c</referenceTo>
    <relationshipLabel>Billing Contract</relationshipLabel>
    <relationshipName>Billing_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>