force-app/main/default/objects/Billing_Contract__c/fields/Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Date__c</fullName>
    <inlineHelpText>The max invoice date from billing lines of type credit</inlineHelpText>
    <label>Credit Date</label>
    <summarizedField>Billing_Contract_Line_Item__c.Invoice_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Ready_to_Invoice__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Invoiced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing_Contract_Line_Item__c.Billing_Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>