force-app/main/default/objects/Billing_Contract__c/fields/Exclude_Automated_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Automated_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-033283</description>
    <inlineHelpText>When this field is checked, the Billing Contract record will not be included in the automated invoicing job.  This field is updated by the Billing Team in Finance</inlineHelpText>
    <label>Exclude Automated Invoicing</label>
    <type>Checkbox</type>
</CustomField>