force-app/main/default/objects/Billing_Contract__c/fields/ffrrtemplate__c.field-meta.xml
<CustomField>
    <fullName>ffrrtemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rev Rec Template</label>
    <referenceTo>ffrr__Template__c</referenceTo>
    <relationshipLabel>Billing Contract</relationshipLabel>
    <relationshipName>Billing_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>