force-app/main/default/objects/Billing_Contract__c/fields/Hosting_and_Support_Total__c.field-meta.xml
<CustomField>
    <fullName>Hosting_and_Support_Total__c</fullName>
    <inlineHelpText>rollup of billing lines where rev category = hosting and support</inlineHelpText>
    <label>Hosting and Support Total</label>
    <summarizedField>Billing_Contract_Line_Item__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Revenue_Category__c</field>
        <operation>equals</operation>
        <value>Hosting and Support</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing_Contract_Line_Item__c.Billing_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>