force-app/main/default/objects/Billing_Contract__c/fields/Include_in_Rev_Rec__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Rev_Rec__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Rev Rec</label>
    <type>Checkbox</type>
</CustomField>