force-app/main/default/objects/Billing_Contract__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <formula>if(ISBLANK(Invoice_Date_Override__c) = true, Next_Invoice_Date__c, Invoice_Date_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>