force-app/main/default/objects/Billing_Contract__c/fields/Invoice_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date_Override__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If populated, this date will be used as the resulting invoice date</inlineHelpText>
    <label>Invoice Date Override</label>
    <type>Date</type>
</CustomField>