force-app/main/default/objects/Billing_Contract__c/fields/Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date__c</fullName>
    <formula>if(ISBLANK(Due_Date_Override__c) = true,

if(TEXT(Agreement__r.APTS_Invoice_Terms__c) = &apos;thirty (30)&apos;, Next_Invoice_Date__c + 30,
   if(TEXT(Agreement__r.APTS_Invoice_Terms__c) = &apos;forty five (45)&apos;, Next_Invoice_Date__c + 30,
      Next_Invoice_Date__c)
   ),
Due_Date_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated from the Apptus Agreement Invoice Terms field</inlineHelpText>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>