force-app/main/default/objects/Billing_Contract__c/fields/Lock_Billing_Contract_Lines__c.field-meta.xml
<CustomField>
    <fullName>Lock_Billing_Contract_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Locks the Billing Lines so the amounts, units, terms, etc cannot be updated.</inlineHelpText>
    <label>Lock Billing Contract Lines</label>
    <type>Checkbox</type>
</CustomField>