force-app/main/default/objects/Billing_Contract__c/fields/Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Invoice_Date__c</fullName>
    <inlineHelpText>Displays the max invoice date from billing line items that are eligible for invoicing</inlineHelpText>
    <label>Next Invoice Date</label>
    <summarizedField>Billing_Contract_Line_Item__c.Invoice_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Invoiced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Ready_to_Invoice__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Invoice</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing_Contract_Line_Item__c.Billing_Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>