force-app/main/default/objects/Billing_Contract__c/fields/No_Price_Increase_Through__c.field-meta.xml
<CustomField>
    <fullName>No_Price_Increase_Through__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No Price Increase Through</label>
    <type>Date</type>
</CustomField>