force-app/main/default/objects/Billing_Contract__c/fields/Number_of_Open_Billing_Lines__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Billing_Lines__c</fullName>
    <inlineHelpText>count of the number of billing lines that have yet to be invoiced</inlineHelpText>
    <label># of Open Billing Lines</label>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Invoiced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing_Contract_Line_Item__c.Billing_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>