force-app/main/default/objects/Billing_Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Billing Contract</relationshipLabel>
    <relationshipName>Billing_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>