force-app/main/default/objects/Billing_Contract__c/fields/Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Id__c</fullName>
    <formula>Parent_Contract_Group__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Id</label>
    <type>Text</type>
</CustomField>