force-app/main/default/objects/Billing_Contract__c/fields/Parent_Contract_Group__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contract Group</label>
    <referenceTo>Parent_Contract_Group__c</referenceTo>
    <relationshipLabel>Billing Contract</relationshipLabel>
    <relationshipName>Billing_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>