force-app/main/default/objects/Billing_Contract__c/fields/Ready_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Credit__c</fullName>
    <formula>Ready_to_Credit_Numeric__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready to Credit</label>
    <type>Checkbox</type>
</CustomField>