force-app/main/default/objects/Billing_Contract__c/fields/Ready_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Invoice__c</fullName>
    <formula>Ready_to_Invoice_Numeric__c &gt; 0
&amp;&amp;
Billing_Hold__c = false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set to true if one or more billing line items are eligible to be invoiced</inlineHelpText>
    <label>Ready to Invoice</label>
    <type>Checkbox</type>
</CustomField>