force-app/main/default/objects/Billing_Contract__c/fields/Ready_to_Invoice_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Invoice_Numeric__c</fullName>
    <label>Ready to Invoice Numeric</label>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Ready_to_Invoice__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Invoiced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Invoice</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing_Contract_Line_Item__c.Billing_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>