force-app/main/default/objects/Billing_Contract__c/fields/Remittance_Info__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remittance Info</label>
    <referenceTo>Remittance_Info__c</referenceTo>
    <relationshipLabel>Billing Contract</relationshipLabel>
    <relationshipName>Billing_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>