force-app/main/default/objects/Billing_Contract__c/fields/Renewal_Increase_Cap_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Increase_Cap_Percentage__c</fullName>
    <inlineHelpText>If populated, any renewal price increases will be capped at this percent</inlineHelpText>
    <label>Renewal Increase Cap (Percentage)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>