force-app/main/default/objects/Billing_Contract__c/fields/Reviewed_by_Finance__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_by_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to review migrated renewal orders</inlineHelpText>
    <label>Reviewed by Finance</label>
    <type>Checkbox</type>
</CustomField>