force-app/main/default/objects/Billing_Contract__c/fields/Services_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Services_Revenue__c</fullName>
    <label>Services Revenue</label>
    <summarizedField>Activity_Line_Item__c.Adjusted_Revenue_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Activity_Line_Item__c.Revenue_Category__c</field>
        <operation>equals</operation>
        <value>&quot;Services,&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>Activity_Line_Item__c.Billing_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>