force-app/main/default/objects/Billing_Contract__c/fields/Ship_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Contract (Ship to Contact)</relationshipLabel>
    <relationshipName>Billing_Contract2</relationshipName>
    <type>Lookup</type>
</CustomField>