force-app/main/default/objects/Billing_Contract__c/fields/Summarize_Service_Lines__c.field-meta.xml
<CustomField>
    <fullName>Summarize_Service_Lines__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When Invoiced, determines if Service Lines should all be summarized into a single line item or not</inlineHelpText>
    <label>Summarize Service Lines</label>
    <type>Checkbox</type>
</CustomField>