force-app/main/default/objects/Billing_Contract__c/fields/Support_Total__c.field-meta.xml
<CustomField>
    <fullName>Support_Total__c</fullName>
    <inlineHelpText>rollup of billing lines where rev category = support</inlineHelpText>
    <label>Support Total</label>
    <summarizedField>Billing_Contract_Line_Item__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Billing_Contract_Line_Item__c.Revenue_Category__c</field>
        <operation>equals</operation>
        <value>Support</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing_Contract_Line_Item__c.Billing_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>