force-app/main/default/objects/Billing_Contract__c/fields/VSOE_Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>VSOE_Calculation_Status__c</fullName>
    <label>VSOE Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>