force-app/main/default/objects/Billing_Contract__c/validationRules/Billing_Contract_Cap_or_CPI.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contract_Cap_or_CPI</fullName>
    <active>true</active>
    <description>Either a Cap increase can be used or a CPI, not both at the same time.</description>
    <errorConditionFormula>ISBLANK(Renewal_Increase_Cap_Percentage__c) = false
&amp;&amp;
Use_CPI_for_Renewal_Price_Increase__c = true</errorConditionFormula>
    <errorMessage>Either CPI or Renewal Increase Cap can be used.</errorMessage>
</ValidationRule>