force-app/main/default/objects/Billing_Contract__c/validationRules/Billing_Contract_Name_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contract_Name_Change</fullName>
    <active>true</active>
    <description>When a Billing Contract name is created, the Billing Contract Name is read only. Created for Jannalee Muise. NICC-024168.</description>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The Billing Contract Name cannot be changed.</errorMessage>
</ValidationRule>