force-app/main/default/objects/Billing_Contract__c/validationRules/Billing_Hold_Reason_Not_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Hold_Reason_Not_Required</fullName>
    <active>true</active>
    <description>Billing Hold Reason is not required when Billing Hold checkbox is unchecked.</description>
    <errorConditionFormula>AND(
NOT(Billing_Hold__c),
NOT(ISBLANK(TEXT(Billing_Hold_Reason__c)))
)</errorConditionFormula>
    <errorMessage>Billing Hold Reason not required, please select None as a value.</errorMessage>
</ValidationRule>