force-app/main/default/objects/Billing_Contract__c/validationRules/Billing_Hold_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Hold_Reason_Required</fullName>
    <active>true</active>
    <description>Reason why Billing Contract is placed on Billing Hold. NICC-042125</description>
    <errorConditionFormula>AND(
Billing_Hold__c,
ISBLANK(TEXT(Billing_Hold_Reason__c))
)</errorConditionFormula>
    <errorMessage>A billing hold reason is required for this record.</errorMessage>
</ValidationRule>