force-app/main/default/objects/Billing_Contract__c/validationRules/Place_on_Billing_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Place_on_Billing_Hold</fullName>
    <active>true</active>
    <description>NICC-041887
Prevents users from updating the Billing Hold field</description>
    <errorConditionFormula>AND(
NOT($Permission.AH_Billing_Contract_Billing_Hold),
ISCHANGED(Billing_Hold__c))</errorConditionFormula>
    <errorMessage>You are not authorized to update the Billing Hold field. Contact the Billing Team to update this field.</errorMessage>
</ValidationRule>