force-app/main/default/objects/Billing_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Next_Invoice_Date__c</columns>
    <columns>Ready_to_Invoice__c</columns>
    <columns>Ready_to_Invoice_Numeric__c</columns>
    <columns>Total_Contract_Amount__c</columns>
    <columns>Software_Revenue__c</columns>
    <columns>Subscription_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>STX</value>
    </filters>
    <label>All</label>
</ListView>