force-app/main/default/objects/Billing_Contract__c/listViews/All_Ready_to_Invoice1.listView-meta.xml
<ListView>
    <fullName>All_Ready_to_Invoice1</fullName>
    <booleanFilter>1 and 2 and 3 and 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Company__c</columns>
    <columns>Collector__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Next_Invoice_Date__c</columns>
    <columns>Ready_to_Invoice__c</columns>
    <columns>Ready_to_Invoice_Numeric__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Total_Contract_Amount__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Bill_to_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ready_to_Invoice__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Billing_Hold__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Ready_to_Invoice_Numeric__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Company__c</field>
        <operation>notContain</operation>
        <value>Itesso BV</value>
    </filters>
    <label>BC&apos;s Ready to Invoice - Excl. Itesso BV</label>
    <language>en_US</language>
</ListView>