force-app/main/default/objects/Billing_Contract__c/listViews/BC_s_On_Hold_Excl_Itesso_BV.listView-meta.xml
<ListView>
    <fullName>BC_s_On_Hold_Excl_Itesso_BV</fullName>
    <booleanFilter>1 AND 3 AND 2 AND 4 AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Next_Invoice_Date__c</columns>
    <columns>Ready_to_Invoice__c</columns>
    <columns>Ready_to_Invoice_Numeric__c</columns>
    <columns>Total_Contract_Amount__c</columns>
    <columns>Software_Revenue__c</columns>
    <columns>Subscription_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ready_to_Invoice__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Company__c</field>
        <operation>notContain</operation>
        <value>Itesso</value>
    </filters>
    <filters>
        <field>Invoice_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>Ready_to_Invoice_Numeric__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Billing_Hold__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>BC&apos;s On Hold - Excl. Itesso BV</label>
</ListView>